tests/spec/emit/snapshots/struct_literal_field_eval_order_captured.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  struct Pair { a: int, b: int }
  
  fn bump(i: mut Ref<int>) -> int {
    i.* = 1
    10
  }
  
  fn main() {
    let mut i = 0
    let p = Pair { a: i, b: bump(&i) }
    let _ = p
  }
---
package main

type Pair struct {
	a int
	b int
}

func bump(i *int) int {
	*i = 1
	return 10
}

func main() {
	i := 0
	field := i
	p := Pair{
		a: field,
		b: bump(&i),
	}
	_ = p
}
