tests/spec/emit/snapshots/struct_literal_field_read_pinned_before_mut_ref_to_its_root.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  struct Suite { name: string }
  struct Pair { a: string, b: string }
  
  fn rename(s: mut Ref<Suite>) -> string { s.name = "z"; "b" }
  
  fn run() -> string {
    let mut s = Suite { name: "a" }
    let p = Pair { a: s.name, b: rename(&s) }
    p.a + p.b
  }
---
package main

type Suite struct {
	name string
}

type Pair struct {
	a string
	b string
}

func rename(s *Suite) string {
	s.name = "z"
	return "b"
}

func run() string {
	s := Suite{name: "a"}
	field := s.name
	p := Pair{
		a: field,
		b: rename(&s),
	}
	return p.a + p.b
}
