tests/spec/emit/snapshots/struct_multiple_field_init_option_functions.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  struct MultiWrapper {
    first: Option<int>,
    second: Option<string>,
  }
  
  fn get_int(x: int) -> Option<int> {
    if x > 0 { Some(x) } else { None }
  }
  
  fn get_string(s: string) -> Option<string> {
    if s != "" { Some(s) } else { None }
  }
  
  fn test() {
    let w = MultiWrapper {
      first: get_int(5),
      second: get_string("hello")
    };
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

type MultiWrapper struct {
	first  lisette.Option[int]
	second lisette.Option[string]
}

func getInt(x int) (int, bool) {
	if x > 0 {
		return x, true
	}
	return 0, false
}

func getString(s string) (string, bool) {
	if s != "" {
		return s, true
	}
	return "", false
}

func test() {
	option := lisette.OptionFromCommaOk[int](getInt(5))
	option_1 := lisette.OptionFromCommaOk[string](getString("hello"))
	_ = MultiWrapper{
		first:  option,
		second: option_1,
	}
}
