tests/spec/emit/snapshots/struct_satisfies_go_interface_with_inherited_methods.snap
---
source: tests/spec/emit/go_interface_adapter.rs
description: |
  
  import "go:example.com/rw"
  
  struct Dev {}
  
  impl Dev {
    fn Read(self, p: mut Slice<uint8>) -> Partial<int, error> {
      Partial.Ok(0)
    }
    fn Write(self, p: Slice<uint8>) -> Partial<int, error> {
      Partial.Ok(0)
    }
  }
  
  fn use_rw(target: rw.ReadWriter) {
    let _ = target
  }
  
  fn main() {
    let d = Dev {}
    use_rw(d as rw.ReadWriter)
  }
---
package main

import "example.com/rw"

type Dev struct{}

func (d Dev) Read(_ []uint8) (int, error) {
	return 0, nil
}

func (d Dev) Write(_ []uint8) (int, error) {
	return 0, nil
}

func useRw(target rw.ReadWriter) {
	_ = target
}

func main() {
	d := Dev{}
	useRw(d)
}
