tests/spec/emit/snapshots/struct_spread_field_before_base_eval_order.snap
---
source: tests/spec/emit/types.rs
description: |
  
  import "go:fmt"
  
  struct Point { x: int, y: int }
  
  fn make_x() -> int { fmt.Println("x"); 1 }
  fn make_base() -> Point { fmt.Println("base"); Point { x: 0, y: 0 } }
  
  fn main() {
    let _ = Point { x: make_x(), ..make_base() }
  }
---
package main

import "fmt"

type Point struct {
	x int
	y int
}

func makeX() int {
	fmt.Println("x")
	return 1
}

func makeBase() Point {
	fmt.Println("base")
	return Point{
		x: 0,
		y: 0,
	}
}

func main() {
	field := makeX()
	copy_1 := makeBase()
	copy_1.x = field
	_ = copy_1
}
